--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="form-group">
     <%= f.label :recipe %><br>
-    <%= f.text_area :recipe %>
+    <%= f.text_area :recipe, size: "30x10" %>
   </div>
   <div class="actions">
     <%= f.submit %>
