--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@recipe) do |f| %>
+<%= form_for(@recipe, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @recipe.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
@@ -10,16 +10,22 @@
       </ul>
     </div>
   <% end %>
+<div class="col-md-8">
 
   <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <div class="control-group">
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
   </div>
   <div class="form-group">
     <%= f.label :recipe %><br>
-    <%= f.text_area :recipe, size: "30x10" %>
+    <div class="control-group">
+      <%= f.text_area :recipe, class: "form-control", rows: 15 %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
+<br />
